--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
     "classnames": "^2.3.2",
+    "g": "^2.0.1",
+    "nodemon": "^3.1.3",
     "react-hook-form": "^7.46.2",
     "swr": "^2.0.1",
     "xlsx": "^0.18.5",
