--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "test-e2e": "playwright test",
     "postinstall": "husky install",
     "app": "yarn start --sources packages/esm-patient-registration-app/ --backend https://openmrs-o3.mpower-social.com",
-    "app2": "yarn start --sources packages/esm-patient-registration-app/"
+    "app2": "yarn start --sources packages/esm-patient-registration-app/",
+    "esm": "yarn up openmrs@next @openmrs/esm-framework@next"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
@@ -30,7 +31,7 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@carbon/react": "~1.37.0",
-    "@openmrs/esm-framework": "next",
+    "@openmrs/esm-framework": "^5.6.1-pre.1968",
     "@openmrs/esm-patient-common-lib": "next",
     "@playwright/test": "1.44.0",
     "@swc/core": "^1.2.165",
@@ -65,7 +66,7 @@
     "jest-cli": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "lint-staged": "^15.2.1",
-    "openmrs": "next",
+    "openmrs": "^5.6.1-pre.1968",
     "prettier": "^3.1.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
